--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="sign_up">Sign Up</string>
     <string name="already_registered_sign_in">Already Registered , Sign In !</string>
     <string name="logout">Logout</string>
+    <string name="profile">Profile</string>
+    <string name="menu_profile">Profile</string>
 </resources>
