--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="logout">Logout</string>
     <string name="profile">Profile</string>
     <string name="menu_profile">Profile</string>
+    <string name="learning">Learning</string>
+    <string name="menu_learning">Learning</string>
 </resources>
