--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="menu_profile">Profile</string>
     <string name="learning">Learning</string>
     <string name="menu_learning">Learning</string>
+    <string name="remember_me">Remember Me</string>
 </resources>
