--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="learning">Learning</string>
     <string name="menu_learning">Learning</string>
     <string name="remember_me">Remember Me</string>
+    <string name="submit">Submit</string>
+    <string name="your_answer">Your answer</string>
+    <string name="question">Question</string>
 </resources>
